@@ -316,7 +316,7 @@ foreach my $p (@ports) {
 		local @admin = &apache::find_directive("php_admin_value",
 						       $vconf);
 		@admin = grep { !/^engine\s+/ } @admin;
-		if ($mode ne "mod_php") {
+		if ($mode ne "mod_php" && !$config{'allow_modphp'}) {
 			push(@admin, "engine Off");
 			}
 		&apache::save_directive("php_admin_value", \@admin,
